<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".StatsActivity">
    
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarStats"
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize"
        android:theme="@style/ToolbarTheme"
        android:background="@color/colorAccentLight"
        app:titleTextColor="@color/colorPrimary"
        app:title="Stats"
        />
    <TextView
        android:id="@+id/tvFramesSent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/frames_sent0"
        android:textSize="26sp"
        android:layout_below="@id/toolbarStats"
        android:layout_marginTop="24dp"
        android:layout_centerHorizontal="true"/>

    <TextView
        android:id="@+id/tvBytesSent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bytes_sent0"
        android:textSize="26sp"
        android:layout_below="@id/tvFramesSent"
        android:layout_marginTop="16dp"
        android:layout_centerHorizontal="true"/>

    <Button
        android:id="@+id/btnResetStats"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reset_stats"
        android:layout_below="@id/tvBytesSent"
        android:layout_marginTop="24dp"
        android:layout_centerHorizontal="true"/>

</RelativeLayout>