<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/myImageView"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/flImage"
        android:contentDescription="@string/image"
        android:src="@drawable/assignment_image_3_transparent"
        android:layout_width="match_parent"
        android:layout_height="220dp"/>
    <FrameLayout
        android:id="@+id/flImage"
        app:layout_constraintTop_toBottomOf="@+id/myImageView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="180dp"
        android:layout_height="150dp"
        android:layout_margin="5dp"
        android:padding="@dimen/main_screen_main_layout_padding"
        android:background="@drawable/item_color_accent_border_ripple_background"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/upload_image"
            android:layout_gravity="center"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/default_button_text_size"
            android:textStyle="bold"
            />
    </FrameLayout>
    <FrameLayout
        android:id="@+id/flStreamVideo"
        app:layout_constraintTop_toBottomOf="@+id/flImage"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="180dp"
        android:layout_height="150dp"
        android:layout_margin="5dp"
        android:padding="@dimen/main_screen_main_layout_padding"
        android:background="@drawable/item_color_accent_border_ripple_background"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/stream_video"
            android:layout_gravity="center"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/default_button_text_size"
            android:textStyle="bold"
            />
    </FrameLayout>
    <FrameLayout
        android:id="@+id/flStats"
        app:layout_constraintTop_toBottomOf="@+id/flStreamVideo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="180dp"
        android:layout_height="150dp"
        android:layout_margin="5dp"
        android:padding="@dimen/main_screen_main_layout_padding"
        android:background="@drawable/item_color_accent_border_ripple_background"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/stats"
            android:layout_gravity="center"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/default_button_text_size"
            android:textStyle="bold"
            />
    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>

